--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>爱心树表白动画（jQuery+Html5）</title>	    
+	<title>给桥本甜奈的一个小礼物~</title>	    
     <link type="text/css" rel="stylesheet" href="css/default.css">
 		
 	<script type="text/javascript" src="js/jquery.min.js"></script>
