--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 		      			<span class="say">可爱的甜甜：</span><br>
 						<span class="say">&emsp;我想，我应该是最幸运的人，能够遇见你，喜欢你，同时，我也得到了你的认可。</span><br>
 						<span class="say">&emsp;我每一天都在期待和你聊天，期待和你一起出去玩儿，一起旅游，去看遍大千世界，在沙漠看日出，在山顶看星星，体验世间所有浪漫的事情，学习世界的每一种语言，对你说我爱你。</span><br>
-			        	<span class="say">&emsp;其实我知道，你有在逃避，有害怕，也有点迷茫，不知道该如何对待这份心意这份感情，不敢去接受。</span><br>
-						<span class="say">&emsp;既然我们互相喜欢，何不鼓起勇气，向前跨出一步呢?</span><br>
-						<span class="say">&emsp;如果你有勇气跨出第一步，那么，剩下的路，无论有多么艰难，我都会坚定地走向你!</span><br>
+			        	<span class="say">&emsp;其实我知道，你有在逃避，有害怕，也有点迷茫，不知道该如何对待这份心意这份感情，不敢去接受。既然我们互相喜欢，何不鼓起勇气，向前跨出一步呢?如果你有勇气跨出第一步，那么，剩下的路，无论有多么艰难，我都会坚定地走向你!</span><br>
 						<span class="say">&emsp;请相信，现在的我能给你快乐幸福，未来的我，更是如此！我不会让你受半点的委屈，虽然会异地，但我相信，我们能一起克服。我，就是你的小太阳！</span><br>
 						<span class="say">&emsp;在青山绿水之间，我想牵着你的手，走过这座桥，桥上是绿叶红花，桥下是流水人家，桥的那头是青丝，桥的这头是白发。</span><br>
 						<span class="say">&emsp;希望下面的数字，能变成我们在一起的计时，就像我牵着你的手，永远地走下去。那么，以后的每一个情人节，七夕节，生日，我们都一起过，好不好？</span><br>
