--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="text">
 		        <div id="code">
 		      		<font>  	
-		      			<span class="say">可爱的甜甜：</span><br>
+		      			<span class="say"></span><br>
 						<span class="say">&emsp;</span><br>
 						<span class="say">&emsp;</span><br>
 			        	<span class="say">&emsp;</span><br>
@@ -46,7 +46,7 @@
             </div>
 		    <div id="clock-box">
 		        <span class="STYLE1"></span>
-		        <font >最最最最可爱的桥本甜奈，我喜欢你</font>
+		        <font >最最最最可爱的桥本甜奈，我们在一起</font>
 				<span class="STYLE1">已经有</span>
 		        <div id="clock"></div>
 		    </div>
@@ -185,8 +185,8 @@
 	
 	        var textAnimate = eval(Jscex.compile("async", function () {
 			    var together = new Date();
-			    together.setFullYear(2020,0 , 11); 			//时间年月日
-			    together.setHours(20);						//小时	
+			    together.setFullYear(2020,1 , 12); 			//时间年月日
+			    together.setHours(19);						//小时	
 			    together.setMinutes(0);					//分钟
 			    together.setSeconds(0);					//秒前一位
 			    together.setMilliseconds(0);				//秒第二位
